--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -1,10 +1,12 @@
-input, textarea, select {
+input,
+textarea,
+select {
   appearance: none;
   width: 100%;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   border: 1px solid var(--stroke-default);
 
-  padding: .75rem 1rem;
+  padding: 0.75rem 1rem;
   font: var(--text);
 }
 
@@ -13,41 +15,40 @@ label {
   color: var(--text-secondary);
 
   display: block;
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 
 input:focus,
 select:focus,
 textarea:focus,
 input[type="date"]:focus-within {
-  outline: .25rem solid var(--surface-secondary);
-  border: .125rem solid var(--stroke-hightlight);
-  outline-offset: .1px;
+  outline: 0.25rem solid var(--surface-secondary);
+  border: 0.125rem solid var(--stroke-highlight);
+  outline-offset: 0.1px;
 }
 
-input[type="date"] { 
+input[type="date"] {
   position: relative;
   &::-webkit-calendar-picker-indicator {
-  opacity: 0;
+    opacity: 0;
   }
 
   &::before {
-    content: "";  
+    content: "";
     position: absolute;
-    background: url(../../Assets/icons/calendar-03.svg)
-    center/contain;
+    background: url(../../Assets/icons/calendar-03.svg) center/contain;
     right: 1rem;
     width: 1.25rem;
     height: 1.25rem;
 
     top: 50%;
     transform: translateY(-50%);
-  }  
+  }
 }
 
 select {
-  background: url(../../Assets/icons/arrow-down-01.svg)
-  no-repeat calc(100% - 1rem);
+  background: url(../../Assets/icons/arrow-down-01.svg) no-repeat
+    calc(100% - 1rem);
 }
 
 .address .flex {
@@ -55,7 +56,7 @@ select {
 }
 
 .input-wrapper:has([disabled]) {
-  opacity: .5;
+  opacity: 0.5;
 }
 
 input {
@@ -74,19 +75,19 @@ input {
     color: #78716c;
 
     display: inline-block;
-    margin-top: .25rem;
+    margin-top: 0.25rem;
   }
 
   &[required] + .error {
     display: flex;
     align-items: center;
-    gap: .25rem;
+    gap: 0.25rem;
 
     font: var(--text-sm);
     color: var(--semantic-error);
-    margin-top: .25rem;
+    margin-top: 0.25rem;
   }
-  
+
   &:not(:focus):valid + .error {
     display: none;
   }
